--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@mapbox/mapbox-gl-draw": "^1.0.2",
     "@turf/turf": "^4.7.3",
-    "electron-canvas-to-buffer": "^2.0.0"
+    "electron-canvas-to-buffer": "^2.0.0",
+    "mapbox-gl": "^0.41.0"
   }
 }
