major changes in structure

--- a/package.json
+++ b/package.json
@@ -1,11 +1,74 @@
 {
-  "name": "terry-mapper",
-  "version": "0.1.0",
-  "main": "main.js",
-  "dependencies": {
-    "@mapbox/mapbox-gl-draw": "^1.0.2",
-    "@turf/turf": "^4.7.3",
-    "electron-canvas-to-buffer": "^2.0.0",
-    "mapbox-gl": "^0.41.0"
-  }
+    "name": "terry-mapper",
+    "productName": "Terry Mapper",
+    "version": "0.1.0",
+    "description": "Manage offline Maps, allow to draw overlays and style.",
+    "main": "src/index.js",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/Toshiwoz/terry-mapper.git"
+    },
+    "scripts": {
+        "start": "electron-forge start",
+        "package": "electron-forge package",
+        "make": "electron-forge make",
+        "lint": "eslint src"
+    },
+    "keywords": [],
+    "author": "Leo",
+    "license": "MIT",
+    "config": {
+        "forge": {
+            "make_targets": {
+                "win32": [
+                    "squirrel"
+                ],
+                "darwin": [
+                    "zip"
+                ],
+                "linux": [
+                    "deb",
+                    "rpm"
+                ]
+            },
+            "electronPackagerConfig": {
+                "packageManager": "yarn"
+            },
+            "electronWinstallerConfig": {
+                "name": "terry_mapper"
+            },
+            "electronInstallerDebian": {},
+            "electronInstallerRedhat": {},
+            "github_repository": {
+                "owner": "",
+                "name": ""
+            },
+            "windowsStoreConfig": {
+                "packageName": "",
+                "name": "terry_mapper"
+            }
+        }
+    },
+    "dependencies": {
+        "@mapbox/mapbox-gl-draw": "^1.0.4",
+        "@turf/turf": "^4.7.3",
+        "electron-canvas-to-buffer": "^2.0.0",
+        "electron-compile": "^6.4.2",
+        "electron-squirrel-startup": "^1.0.0",
+        "jquery": "3.2.1",
+        "mapbox-gl": "^0.41.0",
+        "osmtogeojson": "^3.0.0-beta.2"
+    },
+    "devDependencies": {
+        "babel-plugin-transform-async-to-generator": "^6.24.1",
+        "babel-preset-env": "^1.6.1",
+        "babel-preset-react": "^6.24.1",
+        "electron-forge": "^4.1.2",
+        "electron-prebuilt-compile": "1.7.9",
+        "eslint": "3",
+        "eslint-config-airbnb": "15",
+        "eslint-plugin-import": "2",
+        "eslint-plugin-jsx-a11y": "5",
+        "eslint-plugin-react": "7"
+    }
 }
