--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
-*.lnk
-node_modules/*
-maps/
-maps_overlay/
-styles/*
-!styles/json-custom/
+node_modules
+out
+src/maps/
+src/maps_overlay/
+src/styles/*
+!src/styles/json-custom/
