--- a/package.json
+++ b/package.json
@@ -52,12 +52,15 @@
     "dependencies": {
         "@mapbox/mapbox-gl-draw": "^1.0.4",
         "@turf/turf": "^4.7.3",
+        "bootstrap": "4.0.0-beta.2",
         "electron-canvas-to-buffer": "^2.0.0",
         "electron-compile": "^6.4.2",
         "electron-squirrel-startup": "^1.0.0",
         "jquery": "3.2.1",
         "mapbox-gl": "^0.41.0",
-        "osmtogeojson": "^3.0.0-beta.2"
+        "osmtogeojson": "^3.0.0-beta.2",
+        "popper.js": "1.12.3",
+        "tether": "^1.4.1"
     },
     "devDependencies": {
         "babel-plugin-transform-async-to-generator": "^6.24.1",
